perf: fix SonarCloud S6204 - replace collect(toList()) with toList()